--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,11 +6,20 @@
     {
       "path": "scss/style.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "scss/variables.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "scss/mixins.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss"
+      "scss",
+      "css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -24,7 +33,15 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "scss/style.scss",
+      "imports": [
+        "scss/variables.scss",
+        "scss/mixins.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
